# golf

./: .gitignore  README.md  example.py  flake.nix  pyproject.toml  run_lin_fit.py  setup.py  testing.ipynb
.github/workflows/: python-publish.yml
experiment/: dataset_gen.py  diff_data.py  golf_setup.py  pwlf_setup.py
plf/: __init__.py  model.py  solver.py  trainer.py
src/GOLF/: __init__.py  model.py  trainer.py
src/golf/: __init__.py  initialization.py  model.py  parallel.py  run_variable_segments.py  variable_segments_trainer.py
src/mars/: mars.py
src/plf/: solver.py
tests/: test_model.py  test_trainer.py
