[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plf"
version = "0.0.1"
authors = [
  { name="plf developer", email="dev@example.com" },
]
description = "A small package for piecewise linear fitting."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax",
    "equinox",
    "optax",
    "jaxtyping",
]

[tool.setuptools.packages.find]
where = ["src"]

