[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "golf"
version = "0.0.1"
authors = [
  { name="Maxwell Litsios", email="m.l.h.litsios@student.tue.nl" },
]
description = "Gradient Optimized piecewise Linear Fitting in JAX."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax",
    "equinox",
    "optax",
    "jaxtyping",
]

[tool.setuptools.packages.find]
where = ["src"]

